@@ -1,3 +1,9 @@
+2008-01-25  Nicolas Bruguier  <gandalfn@club-internet.fr>
+
+    * plugins/magnifier/ccm-magnifier.c:
+    * src/ccm-window.c: Scale magnifier on final surface paint, revert 
+                        ccm_window_paint offset, fix menu-animation bug.
+
 2008-01-24  Carlos Diógenes  <cerdiogenes@gmail.com>
 
 Review Nicolas Bruguier  <gandalfn@club-internet.fr>:
